# Aerial_Transportation_Mujoc

./: CMakeLists.txt  README.md  package.xml
include/: MuJoCoMessageHandler.h  simulate.h
launch/: launcher.py
model/xml/: drone_payload.xml  model_1.xml  payload_transportation.xml  tendons.xml
src/: MuJoCoMessageHandler.cpp  glfw_adapter.cc  main.cc  mujoco_ros2_plugin.cpp  simulate.cc
